[gd_scene load_steps=3 format=3 uid="uid://bp5aw5hppvgub"]

[ext_resource type="Script" uid="uid://cs08ctqdq8s1m" path="res://Scenes/Characters/NPCDialogue/DialogueUI.gd" id="1_x0531"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_148a3"]
bg_color = Color(0.7294118, 0.5294118, 0.32941177, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.6117647, 0.43529412, 0.2627451, 1)
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2

[node name="DialogueUI" type="CanvasLayer"]
layer = 128
script = ExtResource("1_x0531")

[node name="Panel" type="Panel" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 69.0
offset_top = 163.0
offset_right = -70.0
offset_bottom = -38.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_148a3")

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 30.0
offset_right = -30.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 4

[node name="NameLabel" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
horizontal_alignment = 1
vertical_alignment = 1

[node name="DialogueLabel" type="RichTextLabel" parent="Panel/VBoxContainer"]
layout_mode = 2
mouse_filter = 2
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_font_sizes/normal_font_size = 14
fit_content = true
scroll_active = false
horizontal_alignment = 1
vertical_alignment = 1

[node name="ContinueHint" type="Label" parent="Panel/VBoxContainer"]
modulate = Color(1, 1, 1, 0.003921569)
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 12
horizontal_alignment = 2
